--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <a style="font-family: Pixelify Sans; font-size: 40px; color: darkorange;">Il gioco ufficiale di Paolo Serra</a>
     <p style="font-family: Pixelify Sans;">In questo sito web potrai giocare al gioco di Paolo Serra. Non c'è bisogno di nessun download, basta cliccare play. </p>
-    <a href="informazioni.html">
+    <a href="play.html">
         <button style="font-family: Pixelify Sans">informazioni sul gioco</button>
     </a>
 </body>
